@@ -5,3 +5,6 @@ The information is formatted as follows:
 CTU #, Xpos x Ypos, PU size, Ofset, Mode, Cost, BL, L, A, AR
 
 Where BL, L, A, and AR are BelowLeft, Left, Above, and AboveRight availability.
+
+The PU information files are now composed as
+	VideoName_QPvalue_PUsize.csv
